--- a/chattigo-integration/src/app/app.functions/package.json
+++ b/chattigo-integration/src/app/app.functions/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@hubspot/api-client": "^7.0.1",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
