--- a/chattigo-integration/src/app/app.json
+++ b/chattigo-integration/src/app/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Get started App",
-  "description": "This is an example private app that shows a custom card on the Contact record tab built with React-based frontend. This card demonstrates a simple handshake with HubSpot's serverless backend.",
+  "name": "Integracion Chattigo",
+  "description": "Esta es una prueba de integracion con Chattigo",
   "uid": "get_started_app",
   "scopes": ["crm.objects.contacts.read", "crm.objects.contacts.write"],
   "public": false,
@@ -8,12 +8,9 @@
     "crm": {
       "cards": [
         {
-          "file": "extensions/example-card.json"
+          "file": "extensions/hsm-card.json"
         }
       ]
     }
-  },
-  "webhooks": {
-    "file": "./webhooks/webhooks.json"
   }
 }
